--- a/index.html
+++ b/index.html
@@ -18,30 +18,32 @@
 </head>
 
 <body>
+  
   <div>
-  <p>Vacination Progress of High GDP Countries over Time</p>
+  <p>Vacination Progress of Countries over Time</p>
   <p>Vacinations per Hundred vs. Time</p>
   <svg id="lineplot" width="800" height="500" style="border:2px solid grey; margin:20px;"></svg>
 
   <script>
+    // Scales and Axises
+
+    const svg = d3.select("svg#lineplot");
+    const width = svg.attr("width");
+    const height = svg.attr("height");
+    const margin = {top: 20, right: 20, bottom: 50, left: 50};
+    const chartWidth = width - margin.left - margin.right;
+    const chartHeight = height - margin.top - margin.bottom;
+    let chartArea = svg.append("g").attr("transform","translate("+margin.left+","+margin.top+")");
+
     d3.csv("country_vaccinations.csv", d3.autoType).then( (data) => {
 
       console.log("Country Vacination Data");
       console.log(data);
 
-
-      // Scales and Axises
-
-      const svg = d3.select("svg#lineplot");
-      const width = svg.attr("width");
-      const height = svg.attr("height");
-      const margin = {top: 20, right: 20, bottom: 50, left: 50};
-      const chartWidth = width - margin.left - margin.right;
-      const chartHeight = height - margin.top - margin.bottom;
-
       const dateExtent = d3.extent(data, d => d.date);
       const dateScale = d3.scaleTime().domain(dateExtent).range([0, chartWidth]);
 
+      // Hard Coded Vax per Hundred axis, will explain later
       // const vaxExtent = d3.extent(data, d => d['total_vaccinations_per_hundred']);
       const vaxScale = d3.scaleLinear().domain([0,40]).range([chartHeight, 0]);
 
@@ -82,16 +84,45 @@
           .attr("transform","translate("+margin.left+","+(chartHeight+margin.top+10)+")")
           .call(dateGridlines);
 
+      // Create lines 
 
+      var pathGenerator = d3.line()
+                            .x(d => dateScale(d['date']))
+                            .y(d => vaxScale(d['total_vaccinations_per_hundred']))
+                            .curve(d3.curveMonotoneX);
+
+      const colors = d3.schemePaired;
+
+      makeLine(data, pathGenerator, "United States", colors[0], colors[1], dateScale, vaxScale);
+      makeLine(data, pathGenerator, "Italy", colors[2], colors[3], dateScale, vaxScale);
+      makeLine(data, pathGenerator, "Denmark", colors[4], colors[5], dateScale, vaxScale);
+      makeLine(data, pathGenerator, "United Kingdom", colors[6], colors[7], dateScale, vaxScale);
 
     });
+
+    function makeLine(data, pathGenerator, country, linecolor, circlecolor, dateScale, vaxScale) {
+
+      let countryData =  data.filter( (d) => { 
+        return d.country == country && d['total_vaccinations_per_hundred'] !== null; }); 
+
+      chartArea.append("path").datum(countryData)
+                      .attr("fill", "none")
+                      .attr("stroke", linecolor)
+                      .attr("stroke-width", 3)
+                      .attr("d", pathGenerator);
+
+      countryData.forEach( (d) => {
+        
+        chartArea.append("circle")
+                .attr("r", 3)
+                .attr("fill", circlecolor)
+                .attr("cx", dateScale(d['date']) )
+                .attr("cy", vaxScale(d['total_vaccinations_per_hundred']) );
+
+      });
+
+    }
   </script>
-
-
-
-
-
-
 
   </div>
 
