axes and labels for scatterplot, cleaned up GDP data

--- a/index.html
+++ b/index.html
@@ -146,16 +146,9 @@
 
   </div>
 
-
-
-  <p>Total number of vaccinations per country</p>
-  <svg id="total" height=500 width=500></svg>
-
   <p>Percent of vaccinated population </p>
   <svg id="per100" height=500 width=500></svg>
 
-  <p>Daily vaccinations per million people</p>
-  <svg id="daily" height=500 width=500></svg>
   <script>
 
     // a list of all the keys used in the GDP dataset
@@ -165,11 +158,20 @@
     for (let i = 2020; i >= 1960; i--) {
       gdpYears.push(i);
     }
-    console.log(gdpYears);
 
-    const svg1 = d3.select("svg#total");
-    const svg2 = d3.select("svg#per100");
-    const svg3 = d3.select("svg#daily");
+    const scatter = d3.select("svg#per100");
+
+    const margins2 = { "top": 10, "right": 10, "bottom": 30, "left": 30 };
+    const height2 = scatter.attr("height");
+    const width2 = scatter.attr("width");
+
+    const chartHeight2 = height2 - margins2.top - margins2.bottom;
+    const chartWidth2 = width2 - margins2.left - margins2.right;
+
+    let ticks = scatter.append("g").attr("id", "ticks2");
+    let chartAreaScatter = scatter.append("g")
+      .attr("id", "chartAreaScatter")
+      .attr("transform", "translate(" + margins2.left + "," + margins2.top + ")");
 
     // load 2 files at once, and go to the .then function when they're both loaded
     Promise.all([
@@ -180,10 +182,9 @@
       const vaxData = files[0];
       const gdpData = files[1];
 
+      // clean vax data
       vaxData.forEach(d => {
         d.people_vaccinated_per_hundred = Number(d.people_vaccinated_per_hundred);
-        d.total_vaccinations = Number(d.total_vaccinations);
-        d.daily_vaccinations_per_million = Number(d.daily_vaccinations_per_million);
       });
 
       const countries = [... new Set(vaxData.map(d => d.country))];
@@ -192,33 +193,33 @@
       const dates = d3.extent(vaxData, d => d.date);
       console.log("Oldest and most recent date", dates);
 
-      // ignore countries that haven't been updated in a month?
+      // ignore countries that haven't been updated in a month
       const recentDates = vaxData.filter(d => d.date >= "2021-02-15");
       const countriesWithRecentDates = [... new Set(recentDates.map(d => d.country))];
-      console.log("Countries with recent data", countriesWithRecentDates.length);
+      console.log("Number of countries with recent data", countriesWithRecentDates.length);
 
       // get most recent vax data for each country, since there's data for each day
-      const recentData = countriesWithRecentDates.map(country => {
+      let recentData = countriesWithRecentDates.map(country => {
         const countryData = vaxData.filter(d => d.country === country);
         countryData.sort((a, b) => b.date.localeCompare(a.date));
         return countryData[0];
       });
-      console.log("Most recent data for each country", recentData);
-
-      const vaxxed = recentData.map(d => d.people_vaccinated_per_hundred);
-      console.log("Percent vaccinated", vaxxed.sort((a, b) => a - b));
 
       // -----------------------------------------
 
+      // clean GDP data
       gdpData.forEach(d => {
         gdpYears.forEach(year => {
           d[year] = Number(d[year]);
         })
-      })
+      });
+
+      // -----------------------------------------
 
       // get most recent GDP data for each country
       // store in dict of COUNTRY CODE => GDP
       // allows for easy look-up later when iterating thru vax data
+      // there might not be GDP data for every country in the vax dataset
       const recentGDP = {};
       gdpData.forEach(d => {
         for (let year of gdpYears) {
@@ -229,62 +230,67 @@
         }
       });
 
-      console.log("Most recent GDP data", recentGDP);
-
-      // can't use d3.extent for GDP data since it's now stored in a dict/object
-      const minGDP = Math.min(...Object.values(recentGDP));
-      const maxGDP = Math.max(...Object.values(recentGDP));
-      const gdpExtent = [minGDP, maxGDP];
-      console.log("GDP extent", gdpExtent);
-
-      const vaxExtent = d3.extent(recentData, d => d.total_vaccinations);
-      console.log(vaxExtent);
-
-      const gdpScale = d3.scaleLog().domain(gdpExtent).range([10, 490]);
-      const vaxScale = d3.scaleLog().domain(vaxExtent).range([490, 10]);
-
-      console.log(recentData);
-
+      // there are some extra rows in GDP data that represent aggregate data
+      // we need to filter those out
+      const validCountryToGDP = {};
       recentData.forEach(d => {
-        svg1.append("circle")
-          .attr("fill", "steelblue")
-          .attr("r", 5)
-          .attr("opacity", 0.8)
-          .attr("cx", gdpScale(recentGDP[d.iso_code]))
-          .attr("cy", vaxScale(d.total_vaccinations))
-          .attr("country", d.country)
-          .attr("gdp", recentGDP[d.iso_code])
-          .attr("vax", d.total_vaccinations)
+        if (d.iso_code in recentGDP) {
+          validCountryToGDP[d.iso_code] = recentGDP[d.iso_code];
+        }
       });
 
-      const vaxPer100Extent = d3.extent(recentData, d => d.people_vaccinated_per_hundred);
-      const vaxPer100Scale = d3.scaleSymlog().domain(vaxPer100Extent).range([490, 10]);
+      // only include countries that have GDP data
+      recentData = recentData.filter(d => d.iso_code in validCountryToGDP);
+
+      // can't use d3.extent for GDP data since it's now stored in a dict/object
+      const minGDP = Math.min(...Object.values(validCountryToGDP));
+      const maxGDP = Math.max(...Object.values(validCountryToGDP));
+      const gdpExtent = [minGDP, maxGDP];
+      const gdpScale = d3.scaleLog().domain(gdpExtent).range([0, chartWidth2]);
+      console.log(gdpExtent)
+
+      const vaxPercentExtent = d3.extent(recentData, d => d.people_vaccinated_per_hundred);
+      const vaxPercentScale = d3.scaleSymlog().domain(vaxPercentExtent).range([chartHeight2, 0]);
+
+      const leftAxis = d3.axisLeft(vaxPercentScale);
+      ticks.append("g")
+        .attr("class", "y axis")
+        .attr("transform", `translate(${margins2.left - 10}, ${margins2.top})`)
+        .call(leftAxis);
+
+      const horizontalGridlines = d3.axisLeft(vaxPercentScale)
+        .tickSize(-chartWidth2 - 10)
+        .tickFormat("");
+      ticks.append("g")
+        .attr("class", "y gridlines")
+        .attr("transform", `translate(${margins2.left - 10}, ${margins2.top})`)
+        .call(horizontalGridlines);
+
+      const commaFormatter = d3.format(",");
+      const bottomAxis = d3.axisBottom(gdpScale).ticks(4).tickFormat(d => "$" + commaFormatter(d));
+      ticks.append("g")
+        .attr("class", "x axis")
+        .attr("transform", `translate(${margins2.left}, ${chartHeight2 + margins2.top + 10})`)
+        .call(bottomAxis);
+
+      const verticalGridlines = d3.axisBottom(gdpScale).ticks(4)
+        .tickSize(-chartHeight2 - 10)
+        .tickFormat("");
+      ticks.append("g")
+        .attr("class", "x gridlines")
+        .attr("transform", `translate(${margins2.left}, ${chartHeight2 + margins2.top + 10})`)
+        .call(verticalGridlines);
 
       recentData.forEach(d => {
-        svg2.append("circle")
+        chartAreaScatter.append("circle")
           .attr("fill", "steelblue")
           .attr("r", 5)
           .attr("opacity", 0.8)
           .attr("cx", gdpScale(recentGDP[d.iso_code]))
-          .attr("cy", vaxPer100Scale(d.people_vaccinated_per_hundred))
+          .attr("cy", vaxPercentScale(d.people_vaccinated_per_hundred))
           .attr("country", d.country)
           .attr("gdp", recentGDP[d.iso_code])
           .attr("vax", d.people_vaccinated_per_hundred)
-      });
-
-      const vaxDailyExtent = d3.extent(recentData, d => d.daily_vaccinations_per_million);
-      const vaxDailyScale = d3.scaleSymlog().domain(vaxDailyExtent).range([490, 10]);
-
-      recentData.forEach(d => {
-        svg3.append("circle")
-          .attr("fill", "steelblue")
-          .attr("r", 5)
-          .attr("opacity", 0.8)
-          .attr("cx", gdpScale(recentGDP[d.iso_code]))
-          .attr("cy", vaxDailyScale(d.daily_vaccinations_per_million))
-          .attr("country", d.country)
-          .attr("gdp", recentGDP[d.iso_code])
-          .attr("vax", d.daily_vaccinations_per_million)
       });
 
     })
